--- a/styles2.css
+++ b/styles2.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Sacramento&display=swap');
+
+
+
 body{
 	background-color: #af2829;
 	padding: 0;
@@ -105,4 +110,18 @@ a{
     font-size: 16px;
      padding:5px 8px 5px 8px;
   }
+}
+
+.container2 {
+    text-align: center;
+}
+
+.message {
+    font-family: 'Sacramento', cursive;
+    font-size: 48px;
+    color: #ff4081;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
